Code/syntax.output
State 25 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ε
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT Tag
   14                | STRUCT OptTag LC DefList RC

   15 OptTag: ε
   16       | ID

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC

   26 StmtList: ε
   27         | Stmt StmtList

   28 Stmt: Exp SEMI
   29     | CompSt
   30     | RETURN Exp SEMI
   31     | IF LP Exp RP Stmt
   32     | IF LP Exp RP Stmt ELSE Stmt
   33     | WHILE LP Exp RP Stmt
   34     | error

   35 DefList: ε
   36        | Def DefList

   37 Def: Specifier DecList SEMI
   38    | error

   39 DecList: Dec
   40        | Dec COMMA DecList

   41 Dec: VarDec
   42    | VarDec ASSIGNOP Exp

   43 Exp: Exp ASSIGNOP Exp
   44    | Exp AND Exp
   45    | Exp OR Exp
   46    | Exp RELOP Exp
   47    | Exp PLUS Exp
   48    | Exp MINUS Exp
   49    | Exp STAR Exp
   50    | Exp DIV Exp
   51    | LP Exp RP
   52    | MINUS Exp
   53    | NOT Exp
   54    | ID LP Args RP
   55    | ID LP RP
   56    | Exp LB Exp RB
   57    | Exp DOT ID
   58    | ID
   59    | INT
   60    | FLOAT

   61 Args: Exp COMMA Args
   62     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 34 38
    INT (258) 19 59
    FLOAT (259) 60
    SEMI (260) 4 5 7 28 30 37
    COMMA (261) 10 22 40 61
    ASSIGNOP (262) 42 43
    RELOP (263) 46
    PLUS (264) 47
    MINUS (265) 48 52
    STAR (266) 49
    DIV (267) 50
    AND (268) 44
    OR (269) 45
    DOT (270) 57
    NOT (271) 53
    TYPE (272) 11
    LP (273) 20 21 31 32 33 51 54 55
    RP (274) 20 21 31 32 33 51 54 55
    LB (275) 19 56
    RB (276) 19 56
    LC (277) 14 25
    RC (278) 14 25
    STRUCT (279) 13 14
    RETURN (280) 30
    IF (281) 31 32
    ELSE (282) 32
    WHILE (283) 33
    ID (284) 16 17 18 20 21 54 55 57 58


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    Program (31)
        on left: 1
        on right: 0
    ExtDefList (32)
        on left: 2 3
        on right: 1 3
    ExtDef (33)
        on left: 4 5 6 7 8
        on right: 3
    ExtDecList (34)
        on left: 9 10
        on right: 4 10
    Specifier (35)
        on left: 11 12
        on right: 4 5 6 7 24 37
    StructSpecifier (36)
        on left: 13 14
        on right: 12
    OptTag (37)
        on left: 15 16
        on right: 14
    Tag (38)
        on left: 17
        on right: 13
    VarDec (39)
        on left: 18 19
        on right: 9 10 19 24 41 42
    FunDec (40)
        on left: 20 21
        on right: 6 7
    VarList (41)
        on left: 22 23
        on right: 20 22
    ParamDec (42)
        on left: 24
        on right: 22 23
    CompSt (43)
        on left: 25
        on right: 6 29
    StmtList (44)
        on left: 26 27
        on right: 25 27
    Stmt (45)
        on left: 28 29 30 31 32 33 34
        on right: 27 31 32 33
    DefList (46)
        on left: 35 36
        on right: 14 25 36
    Def (47)
        on left: 37 38
        on right: 36
    DecList (48)
        on left: 39 40
        on right: 37 40
    Dec (49)
        on left: 41 42
        on right: 39 40
    Exp (50)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 28 30 31 32 33 42 43 44 45 46 47 48 49 50 51 52 53 56 57 61 62
    Args (51)
        on left: 61 62
        on right: 54 61


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error •

    $default  reduce using rule 8 (ExtDef)


State 2

   11 Specifier: TYPE •

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT • Tag
   14                | STRUCT • OptTag LC DefList RC

    ID  shift, and go to state 9

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 12


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • FunDec SEMI

    SEMI  shift, and go to state 14
    ID    shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 8

   12 Specifier: StructSpecifier •

    $default  reduce using rule 12 (Specifier)


State 9

   16 OptTag: ID •
   17 Tag: ID •

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 17 (Tag)


State 10

   14 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 19


State 11

   13 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 13 (StructSpecifier)


State 12

    0 $accept: Program $end •

    $default  accept


State 13

    3 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 3 (ExtDefList)


State 14

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 15

   18 VarDec: ID •
   20 FunDec: ID • LP VarList RP
   21       | ID • LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 18 (VarDec)


State 16

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 21


State 17

    9 ExtDecList: VarDec •
   10           | VarDec • COMMA ExtDecList
   19 VarDec: VarDec • LB INT RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 9 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec • CompSt
    7       | Specifier FunDec • SEMI

    SEMI  shift, and go to state 24
    LC    shift, and go to state 25

    CompSt  go to state 26


State 19

   14 StructSpecifier: STRUCT OptTag LC • DefList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 35 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 29
    Def              go to state 30


State 20

   20 FunDec: ID LP • VarList RP
   21       | ID LP • RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 3

    Specifier        go to state 32
    StructSpecifier  go to state 8
    VarList          go to state 33
    ParamDec         go to state 34


State 21

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 22

   10 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


State 23

   19 VarDec: VarDec LB • INT RB

    INT  shift, and go to state 37


State 24

    7 ExtDef: Specifier FunDec SEMI •

    $default  reduce using rule 7 (ExtDef)


State 25

   25 CompSt: LC • DefList StmtList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 35 (DefList)]
    INT     reduce using rule 35 (DefList)
    FLOAT   reduce using rule 35 (DefList)
    MINUS   reduce using rule 35 (DefList)
    NOT     reduce using rule 35 (DefList)
    LP      reduce using rule 35 (DefList)
    LC      reduce using rule 35 (DefList)
    RC      reduce using rule 35 (DefList)
    RETURN  reduce using rule 35 (DefList)
    IF      reduce using rule 35 (DefList)
    WHILE   reduce using rule 35 (DefList)
    ID      reduce using rule 35 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 38
    Def              go to state 30


State 26

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 27

   38 Def: error •

    $default  reduce using rule 38 (Def)


State 28

   37 Def: Specifier • DecList SEMI

    ID  shift, and go to state 35

    VarDec   go to state 39
    DecList  go to state 40
    Dec      go to state 41


State 29

   14 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 42


State 30

   36 DefList: Def • DefList

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 35 (DefList)]
    INT     reduce using rule 35 (DefList)
    FLOAT   reduce using rule 35 (DefList)
    MINUS   reduce using rule 35 (DefList)
    NOT     reduce using rule 35 (DefList)
    LP      reduce using rule 35 (DefList)
    LC      reduce using rule 35 (DefList)
    RC      reduce using rule 35 (DefList)
    RETURN  reduce using rule 35 (DefList)
    IF      reduce using rule 35 (DefList)
    WHILE   reduce using rule 35 (DefList)
    ID      reduce using rule 35 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 43
    Def              go to state 30


State 31

   21 FunDec: ID LP RP •

    $default  reduce using rule 21 (FunDec)


State 32

   24 ParamDec: Specifier • VarDec

    ID  shift, and go to state 35

    VarDec  go to state 44


State 33

   20 FunDec: ID LP VarList • RP

    RP  shift, and go to state 45


State 34

   22 VarList: ParamDec • COMMA VarList
   23        | ParamDec •

    COMMA  shift, and go to state 46

    $default  reduce using rule 23 (VarList)


State 35

   18 VarDec: ID •

    $default  reduce using rule 18 (VarDec)


State 36

   10 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 10 (ExtDecList)


State 37

   19 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 47


State 38

   25 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 48
    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 25
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    ID      shift, and go to state 57

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 58
    StmtList  go to state 59
    Stmt      go to state 60
    Exp       go to state 61


State 39

   19 VarDec: VarDec • LB INT RB
   41 Dec: VarDec •
   42    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 62
    LB        shift, and go to state 23

    $default  reduce using rule 41 (Dec)


State 40

   37 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 63


State 41

   39 DecList: Dec •
   40        | Dec • COMMA DecList

    COMMA  shift, and go to state 64

    $default  reduce using rule 39 (DecList)


State 42

   14 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 14 (StructSpecifier)


State 43

   36 DefList: Def DefList •

    $default  reduce using rule 36 (DefList)


State 44

   19 VarDec: VarDec • LB INT RB
   24 ParamDec: Specifier VarDec •

    LB  shift, and go to state 23

    $default  reduce using rule 24 (ParamDec)


State 45

   20 FunDec: ID LP VarList RP •

    $default  reduce using rule 20 (FunDec)


State 46

   22 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 32
    StructSpecifier  go to state 8
    VarList          go to state 65
    ParamDec         go to state 34


State 47

   19 VarDec: VarDec LB INT RB •

    $default  reduce using rule 19 (VarDec)


State 48

   34 Stmt: error •

    $default  reduce using rule 34 (Stmt)


State 49

   59 Exp: INT •

    $default  reduce using rule 59 (Exp)


State 50

   60 Exp: FLOAT •

    $default  reduce using rule 60 (Exp)


State 51

   52 Exp: MINUS • Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 66


State 52

   53 Exp: NOT • Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 67


State 53

   51 Exp: LP • Exp RP

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 68


State 54

   30 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 69


State 55

   31 Stmt: IF • LP Exp RP Stmt
   32     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 70


State 56

   33 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 71


State 57

   54 Exp: ID • LP Args RP
   55    | ID • LP RP
   58    | ID •

    LP  shift, and go to state 72

    $default  reduce using rule 58 (Exp)


State 58

   29 Stmt: CompSt •

    $default  reduce using rule 29 (Stmt)


State 59

   25 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 73


State 60

   27 StmtList: Stmt • StmtList

    error   shift, and go to state 48
    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 25
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    ID      shift, and go to state 57

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 58
    StmtList  go to state 74
    Stmt      go to state 60
    Exp       go to state 61


State 61

   28 Stmt: Exp • SEMI
   43 Exp: Exp • ASSIGNOP Exp
   44    | Exp • AND Exp
   45    | Exp • OR Exp
   46    | Exp • RELOP Exp
   47    | Exp • PLUS Exp
   48    | Exp • MINUS Exp
   49    | Exp • STAR Exp
   50    | Exp • DIV Exp
   56    | Exp • LB Exp RB
   57    | Exp • DOT ID

    SEMI      shift, and go to state 75
    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85


State 62

   42 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 86


State 63

   37 Def: Specifier DecList SEMI •

    $default  reduce using rule 37 (Def)


State 64

   40 DecList: Dec COMMA • DecList

    ID  shift, and go to state 35

    VarDec   go to state 39
    DecList  go to state 87
    Dec      go to state 41


State 65

   22 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 22 (VarList)


State 66

   43 Exp: Exp • ASSIGNOP Exp
   44    | Exp • AND Exp
   45    | Exp • OR Exp
   46    | Exp • RELOP Exp
   47    | Exp • PLUS Exp
   48    | Exp • MINUS Exp
   49    | Exp • STAR Exp
   50    | Exp • DIV Exp
   52    | MINUS Exp •
   56    | Exp • LB Exp RB
   57    | Exp • DOT ID

    STAR  shift, and go to state 80
    DIV   shift, and go to state 81
    DOT   shift, and go to state 84
    LB    shift, and go to state 85

    $default  reduce using rule 52 (Exp)


State 67

   43 Exp: Exp • ASSIGNOP Exp
   44    | Exp • AND Exp
   45    | Exp • OR Exp
   46    | Exp • RELOP Exp
   47    | Exp • PLUS Exp
   48    | Exp • MINUS Exp
   49    | Exp • STAR Exp
   50    | Exp • DIV Exp
   53    | NOT Exp •
   56    | Exp • LB Exp RB
   57    | Exp • DOT ID

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 53 (Exp)


State 68

   43 Exp: Exp • ASSIGNOP Exp
   44    | Exp • AND Exp
   45    | Exp • OR Exp
   46    | Exp • RELOP Exp
   47    | Exp • PLUS Exp
   48    | Exp • MINUS Exp
   49    | Exp • STAR Exp
   50    | Exp • DIV Exp
   51    | LP Exp • RP
   56    | Exp • LB Exp RB
   57    | Exp • DOT ID

    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    RP        shift, and go to state 88
    LB        shift, and go to state 85


State 69

   30 Stmt: RETURN Exp • SEMI
   43 Exp: Exp • ASSIGNOP Exp
   44    | Exp • AND Exp
   45    | Exp • OR Exp
   46    | Exp • RELOP Exp
   47    | Exp • PLUS Exp
   48    | Exp • MINUS Exp
   49    | Exp • STAR Exp
   50    | Exp • DIV Exp
   56    | Exp • LB Exp RB
   57    | Exp • DOT ID

    SEMI      shift, and go to state 89
    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85


State 70

   31 Stmt: IF LP • Exp RP Stmt
   32     | IF LP • Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 90


State 71

   33 Stmt: WHILE LP • Exp RP Stmt

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 91


State 72

   54 Exp: ID LP • Args RP
   55    | ID LP • RP

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 92
    ID     shift, and go to state 57

    Exp   go to state 93
    Args  go to state 94


State 73

   25 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 25 (CompSt)


State 74

   27 StmtList: Stmt StmtList •

    $default  reduce using rule 27 (StmtList)


State 75

   28 Stmt: Exp SEMI •

    $default  reduce using rule 28 (Stmt)


State 76

   43 Exp: Exp ASSIGNOP • Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 95


State 77

   46 Exp: Exp RELOP • Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 96


State 78

   47 Exp: Exp PLUS • Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 97


State 79

   48 Exp: Exp MINUS • Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 98


State 80

   49 Exp: Exp STAR • Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 99


State 81

   50 Exp: Exp DIV • Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 100


State 82

   44 Exp: Exp AND • Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 101


State 83

   45 Exp: Exp OR • Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 102


State 84

   57 Exp: Exp DOT • ID

    ID  shift, and go to state 103


State 85

   56 Exp: Exp LB • Exp RB

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    ID     shift, and go to state 57

    Exp  go to state 104


State 86

   42 Dec: VarDec ASSIGNOP Exp •
   43 Exp: Exp • ASSIGNOP Exp
   44    | Exp • AND Exp
   45    | Exp • OR Exp
   46    | Exp • RELOP Exp
   47    | Exp • PLUS Exp
   48    | Exp • MINUS Exp
   49    | Exp • STAR Exp
   50    | Exp • DIV Exp
   56    | Exp • LB Exp RB
   57    | Exp • DOT ID
